--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "j0k3r/graby-site-config": "^1.0.181",
         "j0k3r/httplug-ssrf-plugin": "^3.0",
         "tacman/php-readability": "^2.0",
-        "monolog/monolog": "^1.18.0|^2.3|^3.0",
+        "monolog/monolog": "^3.0",
         "php-http/client-common": "^2.7",
         "php-http/discovery": "^1.19",
         "php-http/httplug": "^2.4",
@@ -35,7 +35,7 @@
         "psr/http-client-implementation": "^1.0",
         "simplepie/simplepie": "^1.8",
         "smalot/pdfparser": "^2.8",
-        "symfony/options-resolver": "^3.4|^4.4|^5.3|^6.4|^7.0",
+        "symfony/options-resolver": "^6.4|^7.0",
         "symfony/polyfill-intl-idn": "^1.26",
         "symfony/polyfill-php80": "^1.27"
     },
