--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,24 +1,9 @@
 parameters:
-    level: 7
-    paths:
-        - maintenance/Rector
-        - src
-        - tests
-
-    bootstrapFiles:
-        - vendor/bin/.phpunit/phpunit/vendor/autoload.php
-
-    ignoreErrors:
-        # because we check for some HTTP client to exist or not (cURL)
-        -
-            message: '#Http\\Client\\Curl\\Client given#'
-            path: %currentWorkingDirectory%/tests/Extractor/HttpClientTest.php
-        # phpstan does not seem to recognize the class override for JSLikeHTMLElement
-        -
-            message: '#Call to an undefined method DOMElement::setInnerHtml\(\)#'
-            path: %currentWorkingDirectory%/src/Extractor/ContentExtractor.php
-        -
-            message: '#\$innerHTML#'
-            path: %currentWorkingDirectory%
-
+    level: 0
     inferPrivatePropertyTypeFromConstructor: true
+    paths:
+        - ./src
+
+    excludePaths:
+      - 'src/Resources/skeleton'
+      - */cache/*
